--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,9 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
+minecraft_version = 1.20.1
+minecraft_min_version = 1.20
+minecraft_max_version = 1.20.2
 yarn_mappings=1.20.1+build.10
 loader_version=0.15.11
 
